--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -14,6 +14,7 @@
     width: 100%;
     height: 100px;
     padding: 20px;
+    padding-right: 40px;
     margin-bottom: 20px;
     background-color: $btn-bg;
 
